# vmplapack

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  ROADMAP.md  ROUTINES.md  SKILLS.md
.github/workflows/: ci.yml
benchmarks/: benchmark_m11_core.cpp
cmake/: FindGMP.cmake  FindMPFR.cmake  RoundingControl.cmake  vmplapackConfig.cmake.in
docs/: SPEC.md
examples/: example_m0_midrad.cpp  example_m11_dot_driver.cpp  example_m11_residual_worked.cpp  example_m12_random_high_condition_gemm.cpp  example_m12_verified_gemm.cpp  example_m12_verified_gemm_highcondition.cpp  example_m12_verified_gemm_large_diff.cpp  example_m12_verified_gemm_medium_diff.cpp  example_m12_verified_gemm_midpoint_error.cpp  example_m12_verified_gemm_oracle_diff.cpp  example_m12_verified_gemm_summary.cpp  example_m13_verified_solve.cpp  example_m13_verified_solve_condition_sweep.cpp  example_m13_verified_solve_hilbert.cpp  example_m13_verified_solve_random.cpp  example_m14_verified_inverse.cpp  example_m14_verified_inverse_highcondition.cpp  example_m1_high_condition_dot_preview.cpp  example_m1_twoproduct_residual.cpp  example_m2_mpfr_tier.cpp  example_m3_oracle_generators.cpp  example_m4_accurate_dot.cpp  example_m4_accurate_sum.cpp  example_m7_apriori_bound.cpp  example_vRdot.cpp  example_vRresidual.cpp
include/vmplapack/: vmpblas.h  vmplapack.h  vmplapack_arith.h  vmplapack_eft.h  vmplapack_utils.h
src/: Rdot.cpp  Rsum.cpp  Rsum_abs_dot_upper.cpp  vRdot.cpp  vRdot_apriori.cpp  vRgecon.cpp  vRgedet.cpp  vRgeinv.cpp  vRgemm_point.cpp  vRgemv_point.cpp  vRgesv.cpp  vRresidual.cpp  vRsum.cpp
tests/: Rdot_oracle.h  Rgendot.h  test_M12a_reference.cpp  test_M12b_fast_matmul.cpp  test_M13_gesv.cpp  test_M14_condition.cpp  test_M14_determinant.cpp  test_M14_inverse.cpp  test_Raccurate.cpp  test_Rarith_eft.cpp  test_Rarith_environment.cpp  test_Rdot_apriori.cpp  test_Rdot_oracle_generators.cpp  test_Rgendot_m8.cpp  test_Rverified.cpp  test_runtime_contract_m9.cpp
tests/consumer/: CMakeLists.txt  consumer_verified_dot.cpp  verify_fp_flags.cmake
